changed scale for project cards

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div>
                 <span><img src="./images/giarddesign-dark.png"/></span>
             </div>
-            <ul class="flex flex-row text-[.875rem] tracking-[-0.14px] max-[800px]:hidden">
+            <ul class="flex flex-row items-center text-[.875rem] tracking-[-0.14px] max-[800px]:hidden">
                 <li id="show-proposal-btn" class="pr-[3rem] flex items-center"><span class="mr-[.3125rem]">Oferta </span><img class="ml-[.3125rem]" src="./images/down-carret.png"></li>
                 <li class="pr-[3rem]"><a href="#firm-block"><span>O firmie</span></a></li>
                 <li class="pr-[3rem]"><a href="#projects-block"><span>Realizacje</span></a></li>
@@ -140,7 +140,7 @@
             </div>
             <div class="px-[5.5rem] max-[1190px]:px-[4rem] max-[680px]:px-[0]">
                 <div class="offer-block-cards flex flex-row justify-center max-[680px]:flex-col max-[680px]:justify-center max-[680px]:items-center">
-                    <div id="projekty" class="offer-card bg-[#fff] py-[3rem] px-[2.5rem] w-[23.625rem] rounded-[1.75rem] mr-[4rem] hover:scale-[1.1] duration-300 max-[1150px]:px-[2rem] max-[680px]:mr-[0] max-[680px]:w-[80%]">
+                    <div id="projekty" class="offer-card bg-[#fff] py-[3rem] px-[2.5rem] w-[23.625rem] rounded-[1.75rem] mr-[4rem] hover:scale-[1.05] duration-300 max-[1150px]:px-[2rem] max-[680px]:mr-[0] max-[680px]:w-[90%]">
                         <div class="mb-[4rem]">
                             <div class="mb-[2rem]">
                                 <img src="./images/card-pencil-icon.png" alt="">
@@ -154,7 +154,7 @@
                             <button class="text-[#1B5B31] border-b-[1px] border-[#1B5B31]"><span>Dowiedz się więcej</span><img class="inline ml-[.625rem]" src="./images/link-right.svg"/></button>
                         </div>
                     </div>
-                    <div id="wizualizacje" class="offer-card bg-[#fff] py-[3rem] px-[2.5rem] w-[23.625rem] rounded-[1.75rem] mr-[4rem] hover:scale-[1.1] duration-300 max-[1150px]:px-[2rem] max-[680px]:mt-[2rem] max-[680px]:mr-[0] max-[680px]:w-[80%]">
+                    <div id="wizualizacje" class="offer-card bg-[#fff] py-[3rem] px-[2.5rem] w-[23.625rem] rounded-[1.75rem] mr-[4rem] hover:scale-[1.05] duration-300 max-[1150px]:px-[2rem] max-[680px]:mt-[2rem] max-[680px]:mr-[0] max-[680px]:w-[90%]">
                         <div class="mb-[4rem]">
                             <div class="mb-[2rem] h-[2.5rem]">
                                 <img class="" src="./images/card-eye-icon.png" alt="">
@@ -168,7 +168,7 @@
                             <button class="text-[#1B5B31] border-b-[1px] border-[#1B5B31]"><span>Dowiedz się więcej</span><img class="inline ml-[.625rem]" src="./images/link-right.svg"/></button>
                         </div>
                     </div>
-                    <div id="realizacje" class="offer-card bg-[#fff] py-[3rem] px-[2.5rem] w-[23.625rem] rounded-[1.75rem] hover:scale-[1.1] duration-300 max-[1150px]:px-[2rem] max-[680px]:mt-[2rem] max-[680px]:w-[80%]">
+                    <div id="realizacje" class="offer-card bg-[#fff] py-[3rem] px-[2.5rem] w-[23.625rem] rounded-[1.75rem] hover:scale-[1.05] duration-300 max-[1150px]:px-[2rem] max-[680px]:mt-[2rem] max-[680px]:w-[90%]">
                         <div class="mb-[4rem]">
                             <div class="mb-[2rem]">
                                 <img src="./images/card-shine-icon.png" alt="">
