corrected overflowing elements

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         </div>
         <!-- I N S T A G R A M  B L O C K -->
         <div class="flex justify-center py-[3.75rem] px-[12.5rem] max-[680px]:px-[0] max-[680px]:py-[0]">
-            <div class="bg-[#1B5B31] py-[7.5rem] px-[6.875rem] max-[680px]:px-[2rem]">
+            <div class="bg-[#1B5B31] py-[7.5rem] px-[6.875rem] max-[680px]:px-[2rem] overflow-x-hidden">
                 <div class="flex flex-row justify-between text-[#F5F0EC] max-[680px]:flex-col">
                     <div class="mr-[4rem] max-[680px]:mr-[0]">
                         <h1 class="text-[2.5rem] font-normal mont-font tracking-[-2px] leading-[3rem]">Zostańmy w kontakcie! Znajdziesz nas na <span class="italic font-medium tracking-[1px]">Instagramie.</span></h1>
