made navbar sticky. FINAL PUSH :)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <!-- N A V I G A T I O N  D I V -->
-    <div id="navigation-div" class="py-[1.5rem] px-[5.5rem] max-[800px]:px-[2rem]">
+    <div id="navigation-div" class="py-[1.5rem] px-[5.5rem] max-[800px]:px-[2rem] fixed w-[100%] bg-[#fff] z-[3]">
         <nav class="flex flex-row justify-between items-center">
             <div>
                 <span><img src="./images/giarddesign-dark.png"/></span>
@@ -107,7 +107,7 @@
     <main>
         <!-- H E R O  B L O C K -->
         <div class="flex flex-row justify-between max-[680px]:flex-col ">
-            <div class="w-[52.2%] pl-[5.5rem] py-[9.03rem] pr-[4rem] bg-[#DCC1AB] max-[1110px]:w-[60%] max-[1110px]:px-[2rem] max-[680px]:w-[100%] max-[680px]:py-[4.065rem]">
+            <div class="w-[52.2%] pl-[5.5rem] pt-[13.53rem] pb-[9.03rem] pr-[4rem] bg-[#DCC1AB] max-[1110px]:w-[60%] max-[1110px]:px-[2rem] max-[680px]:w-[100%] max-[680px]:pb-[4.065rem] max-[680px]:pt-[8.575rem]">
                 <div>
                     <div>
                         <h1 class="text-[3.75rem] font-medium leading-[4.375rem] mb-[2.75rem] mont-font max-[940px]:leading-normal max-[680px]:break-words max-[680px]:leading-normal max-[680px]:tracking-[-1.44px] max-[680px]:text-[2.8rem]">Nowoczesna aranżacja Twojego ogrodu </h1>
